--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="<%= BASE_URL %>js/md5.js"></script>
     <script src="<%= BASE_URL %>js/session-storage.js"></script>
-    <script src="<%= BASE_URL %>js/echarts_5.0.2.min.js"></script>
+    <!--<script src="<%= BASE_URL %>js/echarts_5.0.2.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
